--- a/src/pages/instruments/03_csr_en.html
+++ b/src/pages/instruments/03_csr_en.html
@@ -145,20 +145,41 @@
                     </select>
                 </div>
             </div>
-            <input type="hidden" id="i4d" name="i4d" />
+            <div class="grid grid-cols-2 gap-4 items-center mt-6">
+                <div>I4d. Type of settlement</div>
+                <div>
+                    <select id="i4d" name="i4d"
+                        class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
+                        <option value="10" class="t_settlement_type_10"></option>
+                        <option value="20" class="t_settlement_type_20"></option>
+                        <option value="21" class="t_settlement_type_21"></option>
+                        <option value="22" class="t_settlement_type_22"></option>
+                        <option value="23" class="t_settlement_type_23"></option>
+                        <option value="24" class="t_settlement_type_24"></option>
+                        <option value="31" class="t_settlement_type_31"></option>
+                    </select>
+                </div>
+            </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>I5. Type of institution</div>
                 <div>
                     <select id="i5" name="i5"
                         class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
-                        <option value="0" selected>--</option>
-                        <option value="11" class="t_institution_type_option_11"></option>
-                        <option value="12" class="t_institution_type_option_12"></option>
-                        <option value="13" class="t_institution_type_option_13"></option>
-                        <option value="14" class="t_institution_type_option_14"></option>
-                        <option value="15" class="t_institution_type_option_15"></option>
-                        <option value="16" class="t_institution_type_option_16"></option>
-                        <option value="17" class="t_institution_type_option_17"></option>
+                        <option selected>Please select one of the following codes</option>
+                        <optgroup label="Childcare institutions:">
+                            <option value="11">11. Children&#39;s home (Baby home))</option>
+                            <option value="12">12. Mehribonlik house</option>
+                            <option value="13">13. Muruvat house for children with disabilities</option>
+                        </optgroup>
+                        <optgroup label="Boarding schools:">
+                            <option value="21">21. Type I-II for deaf or with hearing impairments children</option>
+                            <option value="22">22. Type III-IV for blind or visually impaired children</option>
+                            <option value="23">23. Type V for children with severe speech impairments</option>
+                            <option value="24">24. Type VI for children with musculoskeletal disorders</option>
+                            <option value="25">25. Type VII for children with children with slow mental
+                                development/mental disorders</option>
+                            <option value="26">26. Type VIII for children with intellectual disabilities</option>
+                        </optgroup>
                     </select>
                 </div>
             </div>
@@ -174,7 +195,7 @@
             </div>
 
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
-                <div>J2. Name of the department within the institution.</div>
+                <div>J2. Name of the department within the institution</div>
                 <div class="col-span-1 flex items-center gap-4">
                     <div class="flex items-center gap-4">
                         <input type="text" id="j2" name="j2"
@@ -254,7 +275,7 @@
                     <div class="flex items-center">
                         <input id="j6-1" type="radio" value="0" name="j6"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="j6-1" class="ms-2 text-sm text-gray-900">0. None</label>
+                        <label for="j6-1" class="ms-2 text-sm text-gray-900">0. No education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="j6-2" type="radio" value="1" name="j6"
@@ -269,13 +290,28 @@
                     <div class="flex items-center">
                         <input id="j6-4" type="radio" value="3" name="j6"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="j6-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational
-                            education</label>
+                        <label for="j6-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary</label>
                     </div>
                     <div class="flex items-center">
                         <input id="j6-5" type="radio" value="4" name="j6"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="j6-5" class="ms-2 text-sm text-gray-900">4. Higher education</label>
+                        <label for="j6-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational
+                            education</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="j6-6" type="radio" value="5" name="j6"
+                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="j6-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="j6-7" type="radio" value="6" name="j6"
+                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="j6-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="j6-9" type="radio" value="9" name="j6"
+                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="j6-9" class="ms-2 text-sm text-gray-900">9. Unspecified/unknown</label>
                     </div>
                 </div>
             </div>
@@ -359,7 +395,7 @@
                     <div class="flex items-center">
                         <input id="e4-1" type="radio" value="0" name="e4"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="e4-1" class="ms-2 text-sm text-gray-900">0. None</label>
+                        <label for="e4-1" class="ms-2 text-sm text-gray-900">0. No education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="e4-2" type="radio" value="1" name="e4"
@@ -374,13 +410,28 @@
                     <div class="flex items-center">
                         <input id="e4-4" type="radio" value="3" name="e4"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="e4-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational
-                            education</label>
+                        <label for="e4-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized secondary</label>
                     </div>
                     <div class="flex items-center">
                         <input id="e4-5" type="radio" value="4" name="e4"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="e4-5" class="ms-2 text-sm text-gray-900">4. Higher education</label>
+                        <label for="e4-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational
+                            education</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="e4-5" type="radio" value="5" name="e4"
+                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="e4-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="e4-7" type="radio" value="6" name="e4"
+                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="e4-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
+                    </div>
+                    <div class="flex items-center">
+                        <input id="e4-9" type="radio" value="9" name="e4"
+                            class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
+                        <label for="e4-9" class="ms-2 text-sm text-gray-900">9. Unspecified/unknown</label>
                     </div>
                 </div>
             </div>
