--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -2315,9 +2315,9 @@
                 <div class="flex gap-4">
                     <input id="cg0" name="cg0" type="checkbox" value="9"
                         class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
-                    <label for="cg0" class="ms-2 text-sm text-gray-900"> &quot;Проверяйте только, если до поступления в
-                        интернат ребенок находился под опекой кого-либо, кроме матери или отца ребенка. В противном
-                        случае перейдите к разделу 4.&quot; </label>
+                    <label for="cg0" class="ms-2 text-sm text-gray-900">Check only if before entering the system, the
+                        child was under the care of someone other than the child's mother or father. Otherwise, skip to
+                        Section 4.</label>
                 </div>
             </div>
 
