--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -2356,9 +2356,9 @@
                 <div class="flex gap-4">
                     <input id="cg0" name="cg0" type="checkbox" value="9"
                         class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
-                    <label for="cg0" class="ms-2 text-sm text-gray-900"> &quot;Agar bola maktab-internatga qabul
-                        qilinishidan oldin bolaning onasi yoki otasi emas, balki boshqa birovning qaramog&#39;ida
-                        bo&#39;lgan bo&#39;lsa, tekshiring. Aks holda, 4-bo&#39;limga o&#39;ting.&quot; </label>
+                    <label for="cg0" class="ms-2 text-sm text-gray-900"> Check only if before entering the system, the
+                        child was under the care of someone other than the child's mother or father. Otherwise, skip to
+                        Section 4. </label>
                 </div>
             </div>
 
