--- a/src/pages/instruments/07_ftch_en.html
+++ b/src/pages/instruments/07_ftch_en.html
@@ -17,6 +17,7 @@
     <div class="fixed top-0 right-0 left-0 bg-slate-200 h-14 z-50 shadow" id="header">
     </div>
     <div class="relative w-full mt-14 pb-10 h-[calc(100vh-6.5rem)] overflow-y-auto">
+
         <form class="px-6 mt-10">
             <div class="grid grid-cols-12 border">
                 <div class="col-span-1 bg-stone-200 p-2"></div>
@@ -121,8 +122,7 @@
             <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">1. INFORMATION ABOUT THE FOSTER PARENTS</h2>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>IFP1. Place of residence:</div>
-                <div>
-                </div>
+                <div></div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>IFP1a. Region:</div>
@@ -263,24 +263,24 @@
                     <div class="flex items-center">
                         <input id="ifm5-4" type="radio" value="3" name="ifm5"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ifm5-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational
-                            education</label>
+                        <label for="ifm5-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized
+                            secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ifm5-5" type="radio" value="4" name="ifm5"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ifm5-5" class="ms-2 text-sm text-gray-900">4. Unfinished specialized
-                            secondary</label>
+                        <label for="ifm5-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational
+                            education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ifm5-6" type="radio" value="5" name="ifm5"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ifm5-6" class="ms-2 text-sm text-gray-900">5. Higher education</label>
+                        <label for="ifm5-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ifm5-7" type="radio" value="6" name="ifm5"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ifm5-7" class="ms-2 text-sm text-gray-900">6. Unfinished higher education</label>
+                        <label for="ifm5-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ifm5-8" type="radio" value="9" name="ifm5"
@@ -445,24 +445,24 @@
                     <div class="flex items-center">
                         <input id="ift5-4" type="radio" value="3" name="ift5"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ift5-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational
-                            education</label>
+                        <label for="ift5-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized
+                            secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ift5-5" type="radio" value="4" name="ift5"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ift5-5" class="ms-2 text-sm text-gray-900">4. Unfinished specialized
-                            secondary</label>
+                        <label for="ift5-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational
+                            education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ift5-6" type="radio" value="5" name="ift5"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ift5-6" class="ms-2 text-sm text-gray-900">5. Higher education</label>
+                        <label for="ift5-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ift5-7" type="radio" value="6" name="ift5"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ift5-7" class="ms-2 text-sm text-gray-900">6. Unfinished higher education</label>
+                        <label for="ift5-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ift5-8" type="radio" value="9" name="ift5"
