--- a/src/pages/instruments/05a_tqyp_en.html
+++ b/src/pages/instruments/05a_tqyp_en.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>STR3. Service location (MHOBT Code)</div>
+                <div>STR3. Service location</div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>a. Region</div>
@@ -91,14 +91,22 @@
                     <div>
                         <select id="str4" name="str4"
                             class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
-                            <option value="0" selected>--</option>
-                            <option value="11" class="t_institution_type_option_11"></option>
-                            <option value="12" class="t_institution_type_option_12"></option>
-                            <option value="13" class="t_institution_type_option_13"></option>
-                            <option value="14" class="t_institution_type_option_14"></option>
-                            <option value="15" class="t_institution_type_option_15"></option>
-                            <option value="16" class="t_institution_type_option_16"></option>
-                            <option value="17" class="t_institution_type_option_17"></option>
+                            <option value="-9" class="t_choose">--</option>
+                            <optgroup label="Childcare institutions:">
+                                <option value="11">11. Mehribonlik house</option>
+                                <option value="12">12. Muruvat house for children with disabilities</option>
+                                <option value="13">13. Family-type home</option>
+                                <option value="14">14. SOS Children&#39;s Village</option>
+                            </optgroup>
+                            <optgroup label="Boarding schools:">
+                                <option value="21">21. Type I-II for deaf or with hearing impairments children</option>
+                                <option value="22">22. Type III-IV for blind or visually impaired children</option>
+                                <option value="23">23. Type V for children with severe speech impairments</option>
+                                <option value="24">24. Type VI for children with musculoskeletal disorders</option>
+                                <option value="25">25. Type VII for children with children with slow mental
+                                    development/mental disorders</option>
+                                <option value="26">26. Type VIII for children with intellectual disabilities</option>
+                            </optgroup>
                         </select>
                     </div>
                 </div>
