--- a/src/pages/instruments/05a_tqyp_ru.html
+++ b/src/pages/instruments/05a_tqyp_ru.html
@@ -56,7 +56,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>STR3. Местоположение службы (код MHOBT)</div>
+                <div>STR3. Местоположение службы</div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>a. Область</div>
@@ -91,14 +91,24 @@
                     <div>
                         <select id="str4" name="str4"
                             class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
-                            <option value="0" selected>--</option>
-                            <option value="11" class="t_institution_type_option_11"></option>
-                            <option value="12" class="t_institution_type_option_12"></option>
-                            <option value="13" class="t_institution_type_option_13"></option>
-                            <option value="14" class="t_institution_type_option_14"></option>
-                            <option value="15" class="t_institution_type_option_15"></option>
-                            <option value="16" class="t_institution_type_option_16"></option>
-                            <option value="17" class="t_institution_type_option_17"></option>
+                            <option value="-9" class="t_choose">--</option>
+                            <optgroup label="Детские учреждения:">
+                                <option value="11">11. Дом Мехрибонлик</option>
+                                <option value="12">12. Дом-интернат Мурувват для детей с инвалидностью</option>
+                                <option value="13">13. Детский дом семейного типа</option>
+                                <option value="14">14. SOS Детская деревня</option>
+                            </optgroup>
+                            <optgroup label="Школа-интернат:">
+                                <option value="21">21. Тип I-II для глухих или слабослышащих детей.</option>
+                                <option value="22">22. Тип III-IV для слепых или слабовидящих детей.</option>
+                                <option value="23">23. V тип для детей с тяжелыми нарушениями речи.</option>
+                                <option value="24">24. VI тип для детей с нарушениями опорно-двигательного аппарата.
+                                </option>
+                                <option value="25">25. Тип VII для детей с детьми с задержкой психического
+                                    развития/психическими нарушениями.</option>
+                                <option value="26">26. Тип VIII для детей с ограниченными интеллектуальными
+                                    возможностями.</option>
+                            </optgroup>
                         </select>
                     </div>
                 </div>
@@ -461,7 +471,6 @@
                     человека.</strong></p>
 
         </form>
-
         <footer id="footer" class="fixed bottom-0 w-full h-12 bg-slate-200 shadow">
             <div class="flex justify-center h-full items-center">
 
