--- a/src/pages/instruments/05a_tqyp_uz.html
+++ b/src/pages/instruments/05a_tqyp_uz.html
@@ -57,7 +57,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>STR3. Xizmatning lokatsiyasi (MHOBT kodi)</div>
+                <div>STR3. Xizmatning lokatsiyasi</div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>a. Viloyat</div>
@@ -92,14 +92,25 @@
                     <div>
                         <select id="str4" name="str4"
                             class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
-                            <option value="0" selected>--</option>
-                            <option value="11" class="t_institution_type_option_11"></option>
-                            <option value="12" class="t_institution_type_option_12"></option>
-                            <option value="13" class="t_institution_type_option_13"></option>
-                            <option value="14" class="t_institution_type_option_14"></option>
-                            <option value="15" class="t_institution_type_option_15"></option>
-                            <option value="16" class="t_institution_type_option_16"></option>
-                            <option value="17" class="t_institution_type_option_17"></option>
+                            <option value="-9" class="t_choose">--</option>
+                            <optgroup label="Bolalar muassasalari:">
+                                <option value="11">11. Mehribonlik uyi</option>
+                                <option value="12">12. Nogironligi boʻlgan bolalar uchun Muruvvat internat uyi</option>
+                                <option value="13">13. Oila tipidagi uy</option>
+                                <option value="14">14. SOS Bolalar makhallasi</option>
+                            </optgroup>
+                            <optgroup label="Maktab-internatlar:">
+                                <option value="21">21. Kar yoki eshitish qobiliyati past boʻlgan bolalar uchun I-II
+                                    toifa</option>
+                                <option value="22">22. Koʻzi koʻr yoki koʻrishi yomon boʻlgan bolalar uchun III-IV toifa
+                                </option>
+                                <option value="23">23. Nutqida ogʻir nuqsoni boʻlgan bolalar uchun V turi</option>
+                                <option value="24">24. Mushak-skelet tizimining buzilishi boʻlgan bolalar uchun VI tur
+                                </option>
+                                <option value="25">25. Ruhiy rivojlanishi sekinlashgan/ ruhiy kasallilkari boʻlgan
+                                    bolalar uchun VII tur</option>
+                                <option value="26">26. Intellektual nuqsoni boʻlgan bolalar uchun VIII tur</option>
+                            </optgroup>
                         </select>
                     </div>
                 </div>
