--- a/src/pages/instruments/08_pfq_en.html
+++ b/src/pages/instruments/08_pfq_en.html
@@ -295,24 +295,24 @@
                     <div class="flex items-center">
                         <input id="ig7-4" type="radio" value="3" name="ig7"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ig7-4" class="ms-2 text-sm text-gray-900">3. Specialized secondary/vocational
-                            education</label>
+                        <label for="ig7-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized
+                            secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ig7-5" type="radio" value="4" name="ig7"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ig7-5" class="ms-2 text-sm text-gray-900">4. Unfinished specialized
-                            secondary</label>
+                        <label for="ig7-5" class="ms-2 text-sm text-gray-900">4. Specialized secondary/vocational
+                            education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ig7-6" type="radio" value="5" name="ig7"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ig7-6" class="ms-2 text-sm text-gray-900">5. Higher education</label>
+                        <label for="ig7-6" class="ms-2 text-sm text-gray-900">5. Unfinished higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ig7-7" type="radio" value="6" name="ig7"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ig7-7" class="ms-2 text-sm text-gray-900">6. Unfinished higher education</label>
+                        <label for="ig7-7" class="ms-2 text-sm text-gray-900">6. Higher education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ig7-8" type="radio" value="9" name="ig7"
