--- a/src/pages/instruments/08_pfq_ru.html
+++ b/src/pages/instruments/08_pfq_ru.html
@@ -142,7 +142,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PF1c. Пункт населения</div>
+                <div>PF1c. Населённый пункт</div>
                 <div>
                     <select id="pf1c" name="pf1c"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -295,25 +295,25 @@
                     <div class="flex items-center">
                         <input id="ig7-4" type="radio" value="3" name="ig7"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ig7-4" class="ms-2 text-sm text-gray-900">3. Среднее специальное/профессиональное
-                            образование</label>
+                        <label for="ig7-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized
+                            secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ig7-5" type="radio" value="4" name="ig7"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ig7-5" class="ms-2 text-sm text-gray-900">4. Незаконченное среднее специальное
+                        <label for="ig7-5" class="ms-2 text-sm text-gray-900">4. Среднее специальное/профессиональное
                             образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ig7-6" type="radio" value="5" name="ig7"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ig7-6" class="ms-2 text-sm text-gray-900">5. Высшее образование</label>
+                        <label for="ig7-6" class="ms-2 text-sm text-gray-900">5. Незаконченное высшее
+                            образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ig7-7" type="radio" value="6" name="ig7"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ig7-7" class="ms-2 text-sm text-gray-900">6. Незаконченное высшее
-                            образование</label>
+                        <label for="ig7-7" class="ms-2 text-sm text-gray-900">6. Высшее образование</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ig7-8" type="radio" value="9" name="ig7"
@@ -1847,6 +1847,7 @@
             </div>
 
         </form>
+
 
         <footer id="footer" class="fixed bottom-0 w-full h-12 bg-slate-200 shadow">
             <div class="flex justify-center h-full items-center">
