--- a/src/pages/instruments/08_pfq_uz.html
+++ b/src/pages/instruments/08_pfq_uz.html
@@ -300,24 +300,24 @@
                     <div class="flex items-center">
                         <input id="ig7-4" type="radio" value="3" name="ig7"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ig7-4" class="ms-2 text-sm text-gray-900">3. O&#39;rta maxsus/kasb-hunar
-                            ta&#39;lim</label>
+                        <label for="ig7-4" class="ms-2 text-sm text-gray-900">3. Unfinished specialized
+                            secondary/vocational education</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ig7-5" type="radio" value="4" name="ig7"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ig7-5" class="ms-2 text-sm text-gray-900">4. Tugallanmagan o&#39;rta maxsus
-                            ta&#39;lim </label>
+                        <label for="ig7-5" class="ms-2 text-sm text-gray-900">4. O&#39;rta maxsus/kasb-hunar
+                            ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ig7-6" type="radio" value="5" name="ig7"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ig7-6" class="ms-2 text-sm text-gray-900">5. Oliy ta&#39;lim</label>
+                        <label for="ig7-6" class="ms-2 text-sm text-gray-900">5. Tugallanmagan oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ig7-7" type="radio" value="6" name="ig7"
                             class="w-4 h-4 text-blue-600 border-gray-400 focus:ring-blue-500 disabled:bg-gray-200">
-                        <label for="ig7-7" class="ms-2 text-sm text-gray-900">6. Tugallanmagan oliy ta&#39;lim</label>
+                        <label for="ig7-7" class="ms-2 text-sm text-gray-900">6. Oliy ta&#39;lim</label>
                     </div>
                     <div class="flex items-center">
                         <input id="ig7-8" type="radio" value="9" name="ig7"
