--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -6024,7 +6024,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
                 <div>
                     LK22_2_7. Bola/o&#39;smirning hamroh nogironliklari mavjud (ikki yoki undan ortiq turdagi
-                    nogironlik)Avtomatik ravishda to&#39;ldiriladi.</small>
+                    nogironlik)</small>
                 </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
