--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -5926,7 +5926,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
                 <div>
                     LK22_2_7. The child/young person has associated disabilities (two or more types of
-                    disability)Automatically filled in.</small>
+                    disability)</small>
                 </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
