--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -5930,7 +5930,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-10">
                 <div>
                     LK22_2_7. У ребенка/подростка имеется сопутствующая инвалидность (два и более вида
-                    инвалидности)Заполняется автоматически.</small>
+                    инвалидности)</small>
                 </div>
                 <div class="col-span-1 flex flex-col gap-2">
                     <div class="flex items-center">
