--- a/src/pages/instruments/05_yplcs_en.html
+++ b/src/pages/instruments/05_yplcs_en.html
@@ -394,7 +394,8 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PI8. Total time spent within the child care system (in months)</div>
+                <div>PI8. Total time spent within the child care system <strong class="underline">(in months)</strong>
+                </div>
                 <div>
                     <input type="text" id="pi8" name="pi8"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -1430,8 +1431,7 @@
 
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div class="col-span-1">HE8. Has the person had a time in the previous 12 months when he/she did not
-                    have
-                    access to his/her prescribed medication?</div>
+                    have access to his/her prescribed medication?</div>
                 <div class="col-span-1 flex gap-4">
                     <div class="flex items-center">
                         <input id="he8-1" type="radio" value="1" name="he8"
