--- a/src/pages/instruments/05_yplcs_ru.html
+++ b/src/pages/instruments/05_yplcs_ru.html
@@ -244,7 +244,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div>PI4d. Settlement</div>
+                <div>PI4d. Населённый пункт</div>
                 <div>
                     <select id="pi4d" name="pi4d"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
@@ -396,7 +396,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PI8. Общее время пребывания в системе опеки (в месяцах)</div>
+                <div>PI8. Общее время пребывания в системе опеки <strong class="underline">(в месяцах)</strong></div>
                 <div>
                     <input type="text" id="pi8" name="pi8"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
@@ -458,7 +458,7 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 items-center gap-4 mt-6">
-                <div class="ml-4">h. Settlement</div>
+                <div class="ml-4">h. Населённый пункт</div>
                 <div>
                     <select id="pi9h" name="pi9h"
                         class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
