--- a/src/pages/instruments/05_yplcs_uz.html
+++ b/src/pages/instruments/05_yplcs_uz.html
@@ -397,7 +397,8 @@
                 </div>
             </div>
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>PI8. Vasiylik qilish tizimida boʻlgan umumiy vaqt (oylarda)</div>
+                <div>PI8. Vasiylik qilish tizimida boʻlgan umumiy vaqt <strong class="underline">(oylarda)</strong>
+                </div>
                 <div>
                     <input type="text" id="pi8" name="pi8"
                         class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
