--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -74,13 +74,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>DATA. Completion date of questionnaire</div>
-                <div>
-                    <input type="text" id="data" name="data"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                </div>
-            </div>
+            <input type="hidden" id="data" name="data" />
 
             <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">1. PERSON WHO COMPLETED THE INFORMATION ABOUT THIS
                 CHILD</h2>
