--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -77,13 +77,7 @@
                 </div>
             </div>
 
-            <div class="grid grid-cols-2 gap-4 items-center mt-6">
-                <div>MA&#39;LUMOT. So&#39;rovnomani to&#39;ldirish sanasi</div>
-                <div>
-                    <input type="text" id="data" name="data"
-                        class="bg-white border border-gray-400 text-gray-900 text-sm rounded focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100" />
-                </div>
-            </div>
+            <input type="hidden" id="data" name="data" />
 
             <h2 class="mt-10 mb-4 text-2xl font-bold text-gray-700">1. USHBU BOLA HAQIDA MA&#39;LUMOTNI TO&#39;LDIRGAN
                 SHAXS</h2>
