--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -1494,7 +1494,7 @@
             <div class="grid grid-cols-2 gap-4 items-center mt-6">
                 <div>CT3a. Место рождения</div>
                 <div class="flex items-center">
-                    <input id="ct3a_dk" type="checkbox" value="9"
+                    <input id="ct3a_dk" name="ct3a_dk" type="checkbox" value="9"
                         class="w-4 h-4 text-blue-600 border-gray-400 rounded focus:ring-blue-500 disabled:bg-gray-100">
                     <label for="ct3a_dk" class="ms-2 text-sm text-gray-900">9. Неизвестно</label>
                 </div>
