"--" in loc de "0" peste tot

--- a/src/pages/instruments/01_cpis_en.html
+++ b/src/pages/instruments/01_cpis_en.html
@@ -5610,7 +5610,7 @@
                             <select id="sh3_csb" name="sh3_csb"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
-                                <option value="0">--</option>
+                                <option value="--">--</option>
                                 <option value="11">1. Mehribonlik house</option>
                                 <option value="12">2. Muruvat house for children with disabilities</option>
                                 <option value="13">3. Family children&#39;s home</option>
