--- a/src/pages/instruments/01_cpis_uz.html
+++ b/src/pages/instruments/01_cpis_uz.html
@@ -5694,7 +5694,7 @@
                             <select id="sh3_csb" name="sh3_csb"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
-                                <option value="0">--</option>
+                                <option value="--">--</option>
                                 <option value="11">1. Mehribonlik uyi</option>
                                 <option value="12">2. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
                                 <option value="13">3. Oilaviy bolalar uyi</option>
