--- a/src/pages/instruments/01_cpis_ru.html
+++ b/src/pages/instruments/01_cpis_ru.html
@@ -5616,7 +5616,7 @@
                             <select id="sh3_csb" name="sh3_csb"
                                 class="disabled:bg-gray-100 border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5">
                                 <option value="-9" class="t_choose">--- choose ---</option>
-                                <option value="0">--</option>
+                                <option value="--">--</option>
                                 <option value="11">1. Дом «Мехрибонлик»</option>
                                 <option value="12">2. Дом-интернат «Мурувват» для детей с инвалидностью</option>
                                 <option value="13">3. Детский дом семейного типа</option>
