modificat i5 (auto) la instrument 03

--- a/src/pages/instruments/03_csr_en.html
+++ b/src/pages/instruments/03_csr_en.html
@@ -165,21 +165,20 @@
                 <div>
                     <select id="i5" name="i5"
                         class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
-                        <option selected>Please select one of the following codes</option>
-                        <optgroup label="Childcare institutions:">
-                            <option value="11">11. Children&#39;s home (Baby home))</option>
-                            <option value="12">12. Mehribonlik house</option>
-                            <option value="13">13. Muruvat house for children with disabilities</option>
-                        </optgroup>
-                        <optgroup label="Boarding schools:">
-                            <option value="21">21. Type I-II for deaf or with hearing impairments children</option>
-                            <option value="22">22. Type III-IV for blind or visually impaired children</option>
-                            <option value="23">23. Type V for children with severe speech impairments</option>
-                            <option value="24">24. Type VI for children with musculoskeletal disorders</option>
-                            <option value="25">25. Type VII for children with children with slow mental
-                                development/mental disorders</option>
-                            <option value="26">26. Type VIII for children with intellectual disabilities</option>
-                        </optgroup>
+                        <option value="--">--</option>
+                        <option value="11">11. Mehribonlik house</option>
+                        <option value="12">12. Muruvat house for children with disabilities</option>
+                        <option value="13">13. Family-type children&#39;s home</option>
+                        <option value="14">14. SOS children&#39;s villages/families</option>
+                        <option value="15">15. Children&#39;s home/Baby home</option>
+                        <option value="16">16. Patronat family</option>
+                        <option value="17">17. Trusteeship/Guardianship care</option>
+                        <option value="21">21. Type I-II for deaf or with hearing impairments children</option>
+                        <option value="22">22. Type III-IV for blind or visually impaired children</option>
+                        <option value="23">23. Type V for children with severe speech impairments</option>
+                        <option value="24">24. Type VI for children with musculoskeletal disorders</option>
+                        <option value="25">25. Type VII for children with children with slow mental development/mental disorders</option>
+                        <option value="26">26. Type VIII for children with intellectual disabilities</option>
                     </select>
                 </div>
             </div>
