--- a/src/pages/instruments/03_csr_ru.html
+++ b/src/pages/instruments/03_csr_ru.html
@@ -166,23 +166,20 @@
                 <div>
                     <select id="i5" name="i5"
                         class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
-                        <option selected>Пожалуйста, выберите один из следующих кодов</option>
-                        <optgroup label="Детские учреждения:">
-                            <option value="11">11. Детский дом (Дом ребенка))</option>
-                            <option value="12">12. Дом Мехрибонлик</option>
-                            <option value="13">13. Дом-интернат &quot;Мурувват&quot; для детей с инвалидностью.</option>
-                        </optgroup>
-                        <optgroup label="Школы-интернаты:">
-                            <option value="21">21. Тип I-II для глухих или слабослышащих детей.</option>
-                            <option value="22">22. Тип III-IV для слепых или слабовидящих детей.</option>
-                            <option value="23">23. V тип для детей с тяжелыми нарушениями речи.</option>
-                            <option value="24">24. VI тип для детей с нарушениями опорно-двигательного аппарата.
-                            </option>
-                            <option value="25">25. Тип VII для детей с детьми с задержкой психического
-                                развития/психическими нарушениями.</option>
-                            <option value="26">26. Тип VIII для детей с ограниченными интеллектуальными возможностями.
-                            </option>
-                        </optgroup>
+                        <option value="--">--</option>
+                        <option value="11">11. Дом «Мехрибонлик»</option>
+                        <option value="12">12. Дом-интернат «Мурувват» для детей с инвалидностью</option>
+                        <option value="13">13. Детский дом семейного типа</option>
+                        <option value="14">14. SOS Детские деревни/семьи</option>
+                        <option value="15">15. Детский дом (Дом ребенка)</option>
+                        <option value="16">16. Патронатная семья</option>
+                        <option value="17">17. Опека/попечительство</option>
+                        <option value="21">21. Тип I-II для глухих или слабослышащих детей.</option>
+                        <option value="22">22. Тип III-IV для слепых или слабовидящих детей.</option>
+                        <option value="23">23. V тип для детей с тяжелыми нарушениями речи.</option>
+                        <option value="24">24. VI тип для детей с нарушениями опорно-двигательного аппарата.</option>
+                        <option value="25">25. Тип VII для детей с детьми с задержкой психического развития/психическими нарушениями.</option>
+                        <option value="26">26. Тип VIII для детей с ограниченными интеллектуальными возможностями.</option>
                     </select>
                 </div>
             </div>
