--- a/src/pages/instruments/03_csr_uz.html
+++ b/src/pages/instruments/03_csr_uz.html
@@ -169,25 +169,20 @@
                 <div>
                     <select id="i5" name="i5"
                         class="border border-gray-400 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 disabled:bg-gray-100">
-                        <option selected>Iltimos, quyidagi kodlardan birini tanlang</option>
-                        <optgroup label="Bolalar muassasalari:">
-                            <option value="11">11. Bolalar uyi )</option>
-                            <option value="12">12. Mehribonlik uyi</option>
-                            <option value="13">13. Nogironligi bo&#39;lgan bolalar uchun Muruvvat internat uylari
-                            </option>
-                        </optgroup>
-                        <optgroup label="Maktab-internatlar:">
-                            <option value="21">21. Kar yoki eshitish qobiliyati past bolalar uchun I-II turi</option>
-                            <option value="22">22. Ko&#39;zi ojiz va zaif ko&#39;ruvchi bolalar uchun III-IV turi
-                            </option>
-                            <option value="23">23. Nutqida og&#39;ir nuqsoni bo&#39;lgan bolalar uchun V turi</option>
-                            <option value="24">24. Mushak-skelet tizimining buzilishi bo&#39;lgan bolalar uchun VI tur
-                            </option>
-                            <option value="25">25. Aqliy rivojlanishi sekinlashgan bolalar uchun VII tur / ruhiy
-                                kasalliklar</option>
-                            <option value="26">26. Aqliy (intellektual) nuqsoni bo&#39;lgan bolalar uchun VIII tur
-                            </option>
-                        </optgroup>
+                        <option value="--">--</option>
+                        <option value="11">11. Mehribonlik uyi</option>
+                        <option value="12">12. &quot;Muruvvat&quot; nogironligi bo&#39;lgan bolalar uchun internat uyi</option>
+                        <option value="13">13. Oilaviy bolalar uyi</option>
+                        <option value="14">14. SOS Bolalar makhallalari/oilalari</option>
+                        <option value="15">15. Bolalar uyi </option>
+                        <option value="16">16. Patronat oila</option>
+                        <option value="17">17. Vasiylik/homiylik</option>
+                        <option value="21">21. Kar yoki eshitish qobiliyati past bolalar uchun I-II turi</option>
+                        <option value="22">22. Ko&#39;zi ojiz va zaif ko&#39;ruvchi bolalar uchun III-IV turi</option>
+                        <option value="23">23. Nutqida og&#39;ir nuqsoni bo&#39;lgan bolalar uchun V turi</option>
+                        <option value="24">24. Mushak-skelet tizimining buzilishi bo&#39;lgan bolalar uchun VI tur</option>
+                        <option value="25">25. Aqliy rivojlanishi sekinlashgan bolalar uchun VII tur / ruhiy kasalliklar</option>
+                        <option value="26">26. Aqliy (intellektual) nuqsoni bo&#39;lgan bolalar uchun VIII tur</option>
                     </select>
                 </div>
             </div>
